fix: try/catch all DB queries, persistent performance, remove duplicates, better README, fix YAML
